tests/ui/sized/unsized-binding.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/unsized-binding.rs:2:9
   |
LL |     let x = *"";
   |         ^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature
help: references are always `Sized`, even if they point to unsized data; consider not dereferencing the expression
   |
LL -     let x = *"";
LL +     let x = "";
   |

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/unsized-binding.rs:3:20
   |
LL |     println!("{}", x);
   |               --   ^ doesn't have a size known at compile-time
   |               |
   |               required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by an implicit `Sized` bound in `core::fmt::rt::ArgumentChecker::assert_display`
  --> $SRC_DIR/core/src/fmt/rt.rs:LL:COL
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/unsized-binding.rs:3:5
   |
LL |     println!("{}", x);
   |     ^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = help: the following other types implement trait `core::fmt::rt::FmtOp`:
             core::fmt::rt::FmtDisplay<T, F>
             core::fmt::rt::FmtDisplay<T, core::fmt::rt::End>
   = note: required for `core::fmt::rt::FmtDisplay<str, core::fmt::rt::WriteStr<core::fmt::rt::End>>` to implement `core::fmt::rt::FmtOp`
note: required by a bound in `core::fmt::rt::FmtFnBuilder::<F>::build`
  --> $SRC_DIR/core/src/fmt/rt.rs:LL:COL
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/unsized-binding.rs:4:20
   |
LL |     println!("{}", x);
   |               --   ^ doesn't have a size known at compile-time
   |               |
   |               required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by an implicit `Sized` bound in `core::fmt::rt::ArgumentChecker::assert_display`
  --> $SRC_DIR/core/src/fmt/rt.rs:LL:COL
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/unsized-binding.rs:4:5
   |
LL |     println!("{}", x);
   |     ^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = help: the following other types implement trait `core::fmt::rt::FmtOp`:
             core::fmt::rt::FmtDisplay<T, F>
             core::fmt::rt::FmtDisplay<T, core::fmt::rt::End>
   = note: required for `core::fmt::rt::FmtDisplay<str, core::fmt::rt::WriteStr<core::fmt::rt::End>>` to implement `core::fmt::rt::FmtOp`
note: required by a bound in `core::fmt::rt::FmtFnBuilder::<F>::build`
  --> $SRC_DIR/core/src/fmt/rt.rs:LL:COL
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
